# gob-8

./: CMakeLists.txt  Display.hpp  DisplaySDL.cpp  DisplaySDL.hpp  LICENSE  Machine.cpp  Machine.hpp  assembler.cpp  main.cpp
